Bug 573241.  When reparenting a style context, don't include any transition rules the old context might have had in the new one, since that can confuse transitions.  r=dbaron